--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>贪吃蛇</title>
-</head>
-<body>
-    123
-</body>
-<script src="index.ts"></script>
+  </head>
+  <body>
+    <!-- 游戏主容器 -->
+    <div id="main">
+      <!-- 舞台 -->
+      <div id="stage">
+        <!-- 蛇 -->
+        <div id="snake">
+          <!-- snake 内部div：表示蛇的各部分 -->
+          <div></div>
+        </div>
+
+        <!-- 食物 -->
+        <div id="food">
+          <!-- 添加四个div设置食物样式 -->
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+
+      <!-- 记分牌 -->
+      <div id="score-panel">
+        <div>SCORE: <span id="score">0</span></div>
+        <div>LEVEL:<span id="level">1</span></div>
+      </div>
+    </div>
+  </body>
+  <script src="index.ts"></script>
 </html>
